# nrpc-py

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pytest.ini  setup.py
nrpc_cli/: __main__.py  common_base.py  show.py  show_navigator.py  term.py  term_executor.py  term_launcher.py
nrpc_py/: __init__.py  client_socket.py  common_base.py  routing_socket.py  server_socket.py  service_client.py
test/: test_array.py  test_array_client.py  test_build.py  test_class.py  test_cmd_line.py  test_data.py  test_process.py  test_routing.py  test_show.py  test_show_client.py  test_zmq.py
